--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+.websiteName {
+  display: flex;
+  justify-content: center;
+}
+
 .header {
   display: flex;
   justify-content: space-around;
@@ -8,7 +13,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: baseline;
+  align-items: center;
+  border: 1px solid black;
 
 }
 
@@ -17,14 +23,21 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border: 1px solid black;
 }
 
 
 .brewery {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  border: 1px solid black;
+  flex: 1;
+}
+
+.imgdiv {
+  border: 1px solid black;
 }
 
 .img {
@@ -32,5 +45,6 @@
   height: 200px;
   object-fit: cover;
   aspect-ratio: 4/3;
+  border: 1px solid black;
 }
 
