--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: center;
+  /* align-items: center; */
   border: 1px solid black;
-
 }
 
 .breweries {
