--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,15 @@
   
 }
 
+.breweryForm {
+  display: flex;
+}
+
+.forms {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .homeBreweries {
   display: flex;
   flex-direction: row;
