--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,16 @@
 .header {
   display: flex;
   justify-content: space-around;
+  align-items: center;
+  border: 1px solid black;
+  background-color: black;
+  flex: 1;
   
+}
+  
+.navText {
+  text-decoration: none;
+  color: goldenrod;
 }
 
 .breweryForm {
