--- a/src/App.css
+++ b/src/App.css
@@ -20,12 +20,18 @@
   
 .navText {
   text-decoration: none;
-  color: goldenrod;
+  color: #b59410;
 }
 
 .breweryForm {
   display: flex;
+  /* border: 1px solid black; */
 
+}
+
+.form {
+  display: flex;
+  justify-content: center;
 }
 
 .forms {
@@ -33,12 +39,13 @@
   flex-direction: column;
   align-items: center;
 }
+
 .homeBreweries {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   /* align-items: center; */
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 
 .breweries {
@@ -46,7 +53,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: goldenrod;
+  color: #b59410;
   border: 1px solid black;
 
 }
@@ -57,7 +64,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   flex: 1;
 
 }
@@ -67,8 +74,8 @@
 }
 
 .img {
-  width: 200px;
-  height: 200px;
+  width: 400px;
+  height: 400px;
   object-fit: cover;
   aspect-ratio: 4/3;
   border: 1px solid black;
