--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,58 @@
 
-.websiteName {
+h1 {
   display: flex;
   justify-content: center;
 }
+
+.link {
+  text-decoration: none;
+  color: inherit;
+  display: block;
+  text-align: center;
+}
+
 
 .header {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  border: 1px solid black;
   background-color: black;
-  flex: 1;
-  
+  padding-top: 2%;
+  padding-bottom: 2%;
 }
-.search {
-  display: flex;
-  border: 1px solid black;
-}
-  
+
 .navText {
   text-decoration: none;
   color: #b59410;
 }
+
+
+.login {
+  padding-top: 10%;
+  padding-bottom: 15%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
+}
+
+.loginField {
+  margin-bottom: 10px;
+  border: 1px solid black;
+}
+
+.loginButton{
+  display: flex;
+  justify-content: right;
+}
+
+
+.search {
+  display: flex;
+  margin-top: 5px;
+
+} 
+
 
 .breweryForm {
   display: flex;
@@ -42,10 +73,11 @@
 
 .homeBreweries {
   display: flex;
+  margin-top: 50px;
   flex-direction: row;
   justify-content: space-around;
   /* align-items: center; */
-  /* border: 1px solid black; */
+  border: 1px solid black;
 }
 
 .breweries {
@@ -80,4 +112,3 @@
   aspect-ratio: 4/3;
   border: 1px solid black;
 }
-
