--- a/src/App.css
+++ b/src/App.css
@@ -112,3 +112,11 @@ h1 {
   aspect-ratio: 4/3;
   border: 1px solid black;
 }
+
+.flagship{
+  text-align: center;
+}
+
+.favoriteButton{
+  margin-bottom: 5%;
+}
