--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,16 @@ h1 {
   justify-content: center;
 }
 
+h2 {
+  display: flex;
+  justify-content: center;
+}
+
+h5 {
+  display: flex;
+  justify-content: center;
+}
+
 .link {
   text-decoration: none;
   color: inherit;
@@ -101,6 +111,7 @@ h1 {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  color: #b59410;
   /* border: 1px solid black; */
   flex: 1;
 
@@ -115,7 +126,6 @@ h1 {
   height: 400px;
   object-fit: cover;
   aspect-ratio: 4/3;
-  border: 1px solid black;
 }
 
 .flagship{
